yggdrasil/services/kafka/service-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kafka
  namespace: kafka
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from: 
    - namespaceSelector: 
        matchLabels: 
          space: service
  egress:
  - to: 
    - namespaceSelector:
        matchLabels: 
          space: service
